--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajka_apple's Links</title>
     <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Rajka_Apple's Accounts</h1>
