--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rajka_Apple's Accounts</h1>
-    <ul>
-        <li><a href="https://www.twitch.tv/rajka_apple"><i class="fa-brands fa-twitch"></i> Twitch</a></li>
-        <li><a href="https://www.youtube.com/@rajka_apple"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-        <li><a href="https://x.com/Rajka_Apple"><i class="fa-brands fa-x-twitter"></i> Twitter / X</a></li>
-        <li><a href="https://www.reddit.com/user/Rajka_apple/"><i class="fa-brands fa-reddit-alien"></i> Reddit</a></li>
-    </ul>
+    <div class="wrapper">
+        <h1>Rajka_Apple's Accounts</h1>
+        <ul>
+            <li><a href="https://www.twitch.tv/rajka_apple"><i class="fa-brands fa-twitch"></i> Twitch</a></li>
+            <li><a href="https://www.youtube.com/@rajka_apple"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
+            <li><a href="https://x.com/Rajka_Apple"><i class="fa-brands fa-x-twitter"></i> Twitter</a></li>
+            <li><a href="https://www.reddit.com/user/Rajka_apple/"><i class="fa-brands fa-reddit-alien"></i> Reddit</a></li>
+        </ul>
+    </div>
 </body>
 </html>
