--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <div class="wrapper">
         <h1>Rajka_Apple's Accounts</h1>
-        <ul>
-            <li><a href="https://www.twitch.tv/rajka_apple"><i class="fa-brands fa-twitch"></i> Twitch</a></li>
-            <li><a href="https://www.youtube.com/@rajka_apple"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-            <li><a href="https://x.com/Rajka_Apple"><i class="fa-brands fa-x-twitter"></i> Twitter</a></li>
-            <li><a href="https://www.reddit.com/user/Rajka_apple/"><i class="fa-brands fa-reddit-alien"></i> Reddit</a></li>
-        </ul>
+        <div class="links">
+            <ul>
+                <li><a href="https://www.twitch.tv/rajka_apple"><i class="fa-brands fa-twitch"></i> Twitch</a></li>
+                <li><a href="https://www.youtube.com/@rajka_apple"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
+                <li><a href="https://x.com/Rajka_Apple"><i class="fa-brands fa-x-twitter"></i> Twitter</a></li>
+                <li><a href="https://www.reddit.com/user/Rajka_apple/"><i class="fa-brands fa-reddit-alien"></i> Reddit</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
