--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,17 +7,35 @@
     <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="wrapper">
         <h1>Rajka_Apple's Accounts</h1>
         <div class="links">
             <ul>
-                <li><a href="https://www.twitch.tv/rajka_apple"><i class="fa-brands fa-twitch"></i> Twitch</a></li>
-                <li><a href="https://www.youtube.com/@rajka_apple"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-                <li><a href="https://x.com/Rajka_Apple"><i class="fa-brands fa-x-twitter"></i> Twitter</a></li>
-                <li><a href="https://www.reddit.com/user/Rajka_apple/"><i class="fa-brands fa-reddit-alien"></i> Reddit</a></li>
+                <li>
+                    <a href="https://www.twitch.tv/rajka_apple">
+                        <i class="fa-brands fa-twitch"></i> Twitch
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/@rajka_apple">
+                        <i class="fa-brands fa-youtube"></i> Youtube
+                    </a>
+                </li>
+                <li>
+                    <a href="https://x.com/Rajka_Apple">
+                        <i class="fa-brands fa-x-twitter"></i> Twitter
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.reddit.com/user/Rajka_apple/">
+                        <i class="fa-brands fa-reddit-alien"></i> Reddit
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
 </body>
+
 </html>
