--- a/index.html
+++ b/index.html
@@ -3,39 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
     <title>Rajka_apple's Links</title>
 </head>
 
-<body>
-    <div class="wrapper">
-        <h1>Rajka_Apple's Accounts</h1>
-        <div class="links">
-            <ul>
-                <li>
-                    <a href="https://www.twitch.tv/rajka_apple">
-                        <i class="fa-brands fa-twitch"></i> Twitch
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/@rajka_apple">
-                        <i class="fa-brands fa-youtube"></i> Youtube
-                    </a>
-                </li>
-                <li>
-                    <a href="https://x.com/Rajka_Apple">
-                        <i class="fa-brands fa-x-twitter"></i> Twitter
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.reddit.com/user/Rajka_apple/">
-                        <i class="fa-brands fa-reddit-alien"></i> Reddit
-                    </a>
-                </li>
-            </ul>
-        </div>
+<body class="text-center">
+    <h1>Rajka_Apple's Community</h1>
+    <p class="lead fw-bold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
+    <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
+        <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="fa-brands fa-discord"></i>Discord</a>
+        <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-twitch"></i>Twitch</a>
+        <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-youtube"></i>Youtube</a>
+        <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
+        <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark"><i class="fa-brands fa-reddit-alien"></i>Reddit</a>
+    </div>
+
+    <div style="margin-top: 3rem;">
+        <iframe src="https://discord.com/widget?id=942233464068001893&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"
+            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>
 
     <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
