--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 </head>
 
 <body class="text-center">
-    <h1>Rajka_Apple's Community</h1>
-    <p class="lead fw-bold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
-    <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-        <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="fa-brands fa-discord"></i>Discord</a>
-        <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-twitch"></i>Twitch</a>
-        <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-youtube"></i>Youtube</a>
-        <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
-        <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark"><i class="fa-brands fa-reddit-alien"></i>Reddit</a>
-    </div>
+    <div class="container">
+        <h1>Rajka_Apple's Community</h1>
+        <p class="lead fw-bold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
+        <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
+            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="fa-brands fa-discord"></i>Discord</a>
+            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-twitch"></i>Twitch</a>
+            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-youtube"></i>Youtube</a>
+            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
+            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark"><i class="fa-brands fa-reddit-alien"></i>Reddit</a>
+        </div>
 
-    <div style="margin-top: 3rem;">
-        <iframe src="https://discord.com/widget?id=942233464068001893&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"
-            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        <div class="mt-5">
+            <iframe src="https://discord.com/widget?id=942233464068001893&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
