--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="text-center">
     <div class="container">
         <h1>Rajka_Apple's Community</h1>
-        <p class="lead fw-bold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
+        <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
             <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="fa-brands fa-discord"></i>Discord</a>
             <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-twitch"></i>Twitch</a>
