switch to bootstrap icons and remove fontawesome

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <h1>Rajka_Apple's Community</h1>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="fa-brands fa-discord"></i>Discord</a>
-            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-twitch"></i>Twitch</a>
-            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark"><i class="fa-brands fa-youtube"></i>Youtube</a>
-            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
-            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark"><i class="fa-brands fa-reddit-alien"></i>Reddit</a>
+            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="bi bi-discord"></i>Discord</a>
+            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="bi bi-twitch"></i>Twitch</a>
+            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark"><i class="bi bi-youtube"></i>Youtube</a>
+            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark"><i class="bi bi-twitter-x"></i>Twitter</a>
+            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark"><i class="bi bi-reddit"></i>Reddit</a>
         </div>
 
         <div class="mt-4">
@@ -28,7 +28,6 @@
         </div>
     </div>
 
-    <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 
