--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
         <h1>Rajka_Apple's Community</h1>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark"><i class="bi bi-discord"></i>Discord</a>
-            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark"><i class="bi bi-twitch"></i>Twitch</a>
-            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark"><i class="bi bi-youtube"></i>Youtube</a>
-            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark"><i class="bi bi-twitter-x"></i>Twitter</a>
-            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark"><i class="bi bi-reddit"></i>Reddit</a>
+            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark">
+                <i class="bi bi-discord"></i>Discord
+            </a>
+            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark">
+                <i class="bi bi-twitch"></i>Twitch
+            </a>
+            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark">
+                <i class="bi bi-youtube"></i>Youtube
+            </a>
+            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark">
+                <i class="bi bi-twitter-x"></i>Twitter
+            </a>
+            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark">
+                <i class="bi bi-reddit"></i>Reddit
+            </a>
         </div>
 
         <div class="mt-4">
