--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
             <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark">
-                <i class="bi bi-discord"></i>Discord
+                <i class="bi bi-discord"></i>
+                <span>Discord</span>
             </a>
             <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark">
-                <i class="bi bi-twitch"></i>Twitch
+                <i class="bi bi-twitch"></i>
+                <span>Twitch</span>
             </a>
             <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark">
-                <i class="bi bi-youtube"></i>Youtube
+                <i class="bi bi-youtube"></i>
+                <span>Youtube</span>
             </a>
             <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark">
-                <i class="bi bi-twitter-x"></i>Twitter
+                <i class="bi bi-twitter-x"></i>
+                <span>Twitter</span>
             </a>
             <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark">
-                <i class="bi bi-reddit"></i>Reddit
+                <i class="bi bi-reddit"></i>
+                <span>Reddit</span>
             </a>
         </div>
 
