--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <i class="bi bi-twitch"></i>
                 <span>Twitch</span>
             </a>
+            <a href="https://bsky.app/profile/rajkaapple.bsky.social" class="btn btn-outline-dark">
+                <i class="fa-brands fa-bluesky"></i>
+                <span>Bluesky</span>
+            </a>
             <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark">
                 <i class="bi bi-youtube"></i>
                 <span>Youtube</span>
@@ -43,6 +47,7 @@
         </div>
     </div>
 
+    <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 
