--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
                 <i class="bi bi-youtube"></i>
                 <span>Youtube</span>
             </a>
+            <a href="https://rajka-apple-shop.fourthwall.com/en-eur/" class="btn btn-outline-dark">
+                <i class="bi bi-shop-window"></i>
+                <span>Merch Shop</span>
+            </a>
             <a href="https://bsky.app/profile/rajkaapple.bsky.social" class="btn btn-outline-dark">
                 <i class="fa-brands fa-bluesky"></i>
                 <span>Bluesky</span>
+            </a>
+            <a href="https://pin.it/7eCYO7Dak" class="btn btn-outline-dark">
+                <i class="bi bi-pinterest"></i>
+                <span>Pinterest</span>
             </a>
             <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark">
                 <i class="bi bi-reddit"></i>
