--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body class="text-center">
     <div class="container">
         <h1>Rajka_Apple's Community</h1>
-        <p class="lead fw-semibold">Apple Demon V-Tuber playing games and giving life advice - Twitch Affiliate - Story rich RPG streamer</p>
+        <p class="lead mb-2">
+            <span class="badge text-bg-violet">Apple Demon V-Tuber</span>
+            <span class="badge text-bg-purple">Playing Games & Giving Life-Advice</span>
+            <span class="badge text-bg-violet">Twitch Affiliate</span>
+            <span class="badge text-bg-purple">Story rich RPG streamer</span>
+        </p>
+        <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
             <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark">
                 <i class="bi bi-discord"></i>
