--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
             <a href="https://bit.ly/rajka-shop" class="btn btn-outline-dark">
                 <i class="bi bi-shop-window"></i>
-                <span>Merch Shop</span>
+                <span>Merch</span>
             </a>
             <a href="https://bit.ly/rajka-bluesky" class="btn btn-outline-dark">
                 <i class="fa-brands fa-bluesky"></i>
