--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <i class="bi bi-twitch"></i>
                 <span>Twitch</span>
             </a>
+            <a href="https://bit.ly/rajka-tiktok" class="btn btn-outline-dark">
+                <i class="bi bi-tiktok"></i>
+                <span>TikTok</span>
+            </a>
             <a href="https://bit.ly/rajka-youtube" class="btn btn-outline-dark">
                 <i class="bi bi-youtube"></i>
                 <span>Youtube</span>
