--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://kit.fontawesome.com/e3a0498c20.js" crossorigin="anonymous"></script>
 
+    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Rajka_Apple" />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+
     <title>Rajka_apple's Links</title>
 </head>
 
