change merch to shop

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </p>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
+            <a href="https://bit.ly/rajka-shop" class="btn btn-outline-dark">
+                <i class="bi bi-shop-window"></i>
+                <span>Shop</span>
+            </a>
             <a href="https://bit.ly/rajka-discord" class="btn btn-outline-dark">
                 <i class="bi bi-discord"></i>
                 <span>Discord</span>
@@ -44,10 +48,6 @@
             <a href="https://bit.ly/rajka-youtube" class="btn btn-outline-dark">
                 <i class="bi bi-youtube"></i>
                 <span>Youtube</span>
-            </a>
-            <a href="https://bit.ly/rajka-shop" class="btn btn-outline-dark">
-                <i class="bi bi-shop-window"></i>
-                <span>Merch</span>
             </a>
             <a href="https://bit.ly/rajka-bluesky" class="btn btn-outline-dark">
                 <i class="fa-brands fa-bluesky"></i>
