--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="text-center">
     <div class="container">
-        <h1>Rajka_Apple's Community</h1>
+        <h1 class="mt-3">Rajka_Apple's Community</h1>
         <p class="lead mb-2">
             <span class="badge text-bg-violet">Apple Demon V-Tuber</span>
             <span class="badge text-bg-purple">Playing Games & Giving Life-Advice</span>
