update shop link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-            <a href="https://bit.ly/rajka-shop" class="btn btn-outline-dark">
+            <a href="https://bit.ly/rajka-shop-sub" class="btn btn-outline-dark">
                 <i class="bi bi-shop-window"></i>
                 <span>Shop</span>
             </a>
