--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
 
     <script src="https://kit.fontawesome.com/c23625e34a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        (() => {
+            const name = 'outbound-link-click';
+            document.querySelectorAll('a').forEach(a => {
+                if (a.host !== window.location.host && !a.getAttribute('data-umami-event')) {
+                    a.setAttribute('data-umami-event', name);
+                    a.setAttribute('data-umami-event-url', a.href);
+                }
+            });
+        })();
+    </script>
 </body>
 
 </html>
