replace bitly links

--- a/index.html
+++ b/index.html
@@ -32,39 +32,39 @@
         </p>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-            <a href="https://bit.ly/rajka-shop-sub" class="btn btn-outline-dark" id="rajka-shop-link">
+            <a href="https://shop.rajka-apple.com/" class="btn btn-outline-dark" id="rajka-shop-link">
                 <i class="bi bi-shop-window"></i>
                 <span>Shop</span>
             </a>
-            <a href="https://bit.ly/rajka-discord" class="btn btn-outline-dark">
+            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark">
                 <i class="bi bi-discord"></i>
                 <span>Discord</span>
             </a>
-            <a href="https://bit.ly/rajka-twitch" class="btn btn-outline-dark">
+            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark">
                 <i class="bi bi-twitch"></i>
                 <span>Twitch</span>
             </a>
-            <a href="https://bit.ly/rajka-tiktok" class="btn btn-outline-dark">
+            <a href="https://www.tiktok.com/@rajka_apple" class="btn btn-outline-dark">
                 <i class="bi bi-tiktok"></i>
                 <span>TikTok</span>
             </a>
-            <a href="https://bit.ly/rajka-youtube" class="btn btn-outline-dark">
+            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark">
                 <i class="bi bi-youtube"></i>
                 <span>Youtube</span>
             </a>
-            <a href="https://bit.ly/rajka-bluesky" class="btn btn-outline-dark">
+            <a href="https://bsky.app/profile/rajkaapple.bsky.social" class="btn btn-outline-dark">
                 <i class="fa-brands fa-bluesky"></i>
                 <span>Bluesky</span>
             </a>
-            <a href="https://bit.ly/rajka-pinterest" class="btn btn-outline-dark">
+            <a href="https://pin.it/7eCYO7Dak" class="btn btn-outline-dark">
                 <i class="bi bi-pinterest"></i>
                 <span>Pinterest</span>
             </a>
-            <a href="https://bit.ly/rajka-reddit" class="btn btn-outline-dark">
+            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark">
                 <i class="bi bi-reddit"></i>
                 <span>Reddit</span>
             </a>
-            <a href="https://bit.ly/rajka-x" class="btn btn-outline-dark">
+            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark">
                 <i class="bi bi-twitter-x"></i>
                 <span>Twitter</span>
             </a>
