rebrand to apple-cove

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <script src="https://kit.fontawesome.com/e3a0498c20.js" crossorigin="anonymous"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="b5837b79-c44f-49bc-9a86-b1cf9b83d6cb"></script>
 
-    <title>Rajka_apple's Links</title>
+    <title>Rajka_Apple's Apple-Cove</title>
 </head>
 
 <body class="text-center">
     <div class="container">
-        <h1 class="mt-3">Rajka_Apple's Community</h1>
+        <h1 class="mt-3">Rajka_Apple's Apple-Cove</h1>
         <p class="lead mb-2">
             <span class="badge text-bg-violet">Apple Demon V-Tuber</span>
             <span class="badge text-bg-purple">Playing Games & Giving Life-Advice</span>
