correct umami-script relative path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <script src="https://kit.fontawesome.com/e3a0498c20.js" crossorigin="anonymous"></script>
-    <script defer src="/js/umami-script.js" data-host-url="https://cloud.umami.is/script.js" data-website-id="b5837b79-c44f-49bc-9a86-b1cf9b83d6cb"></script>
+    <script defer src="/assets/js/umami-script.js" data-host-url="https://cloud.umami.is/script.js" data-website-id="b5837b79-c44f-49bc-9a86-b1cf9b83d6cb"></script>
 
     <title>Rajka_Apple's Apple-Cove</title>
 </head>
