--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <i class="bi bi-twitch"></i>
                 <span>Twitch</span>
             </a>
+            <a href="https://kirke.social/rajka_apple" class="btn btn-outline-dark" id="kirke-link">
+                <img src="/assets/img/kirke-logo-short.webp" alt="Kirke Logo">
+                <span>Kirke</span>
+            </a>
             <a href="https://www.tiktok.com/@rajka_apple" class="btn btn-outline-dark" id="tiktok-link">
                 <i class="bi bi-tiktok"></i>
                 <span>TikTok</span>
