change shop URL

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
         <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-            <a href="https://shop.rajka-apple.com/" class="btn btn-outline-dark" id="shop-link">
+            <a href="https://rajka-apple.shop/" class="btn btn-outline-dark" id="shop-link">
                 <i class="bi bi-shop-window"></i>
                 <span>Shop</span>
             </a>
