update button layout

--- a/index.html
+++ b/index.html
@@ -31,47 +31,63 @@
             <span class="badge text-bg-purple">Story rich RPG streamer</span>
         </p>
         <p class="lead fw-semibold">Use the following links to discover the bountiful and colored facets of the lovely Mrs. Apple's Community!</p>
-        <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Links to various platforms">
-            <a href="https://shop.rajka-apple.com/" class="btn btn-outline-dark" id="shop-link">
-                <i class="bi bi-shop-window"></i>
-                <span>Shop</span>
-            </a>
-            <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark" id="discord-link">
-                <i class="bi bi-discord"></i>
-                <span>Discord</span>
-            </a>
-            <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark" id="twitch-link">
-                <i class="bi bi-twitch"></i>
-                <span>Twitch</span>
-            </a>
-            <a href="https://kirke.social/rajka_apple" class="btn btn-outline-dark" id="kirke-link">
-                <img src="/assets/img/kirke-logo-short.webp" alt="Kirke Logo">
-                <span>Kirke</span>
-            </a>
-            <a href="https://www.tiktok.com/@rajka_apple" class="btn btn-outline-dark" id="tiktok-link">
-                <i class="bi bi-tiktok"></i>
-                <span>TikTok</span>
-            </a>
-            <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark" id="youtube-link">
-                <i class="bi bi-youtube"></i>
-                <span>Youtube</span>
-            </a>
-            <a href="https://bsky.app/profile/rajkaapple.bsky.social" class="btn btn-outline-dark" id="bluesky-link">
-                <i class="fa-brands fa-bluesky"></i>
-                <span>Bluesky</span>
-            </a>
-            <a href="https://pin.it/7eCYO7Dak" class="btn btn-outline-dark" id="pinterest-link">
-                <i class="bi bi-pinterest"></i>
-                <span>Pinterest</span>
-            </a>
-            <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark" id="reddit-link">
-                <i class="bi bi-reddit"></i>
-                <span>Reddit</span>
-            </a>
-            <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark" id="twitter-link">
-                <i class="bi bi-twitter-x"></i>
-                <span>Twitter</span>
-            </a>
+
+        <div class="button-groups">
+            <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Community Links">
+                <a href="https://discord.gg/bdWeWbhTSR" class="btn btn-outline-dark" id="discord-link">
+                    <i class="bi bi-discord"></i>
+                    <span>Discord</span>
+                </a>
+                <a href="https://shop.rajka-apple.com/" class="btn btn-outline-dark" id="shop-link">
+                    <i class="bi bi-shop-window"></i>
+                    <span>Shop</span>
+                </a>
+                <a href="https://www.twitch.tv/rajka_apple" class="btn btn-outline-dark" id="twitch-link">
+                    <i class="bi bi-twitch"></i>
+                    <span>Twitch</span>
+                </a>
+            </div>
+
+            <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Social Links">
+                <a href="https://bsky.app/profile/rajkaapple.bsky.social" class="btn btn-outline-dark" id="bluesky-link">
+                    <i class="fa-brands fa-bluesky"></i>
+                    <span>Bluesky</span>
+                </a>
+                <a href="https://www.reddit.com/user/Rajka_apple/" class="btn btn-outline-dark" id="reddit-link">
+                    <i class="bi bi-reddit"></i>
+                    <span>Reddit</span>
+                </a>
+                <a href="https://x.com/Rajka_Apple" class="btn btn-outline-dark" id="twitter-link">
+                    <i class="bi bi-twitter-x"></i>
+                    <span>Twitter</span>
+                </a>
+            </div>
+
+            <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Image Platform Links">
+                <a href="https://www.instagram.com/rajka_apple/" class="btn btn-outline-dark" id="instagram-link">
+                    <i class="bi bi-instagram"></i>
+                    <span>Instagram</span>
+                </a>
+                <a href="https://kirke.social/rajka_apple" class="btn btn-outline-dark" id="kirke-link">
+                    <img src="/assets/img/kirke-logo-short.webp" alt="Kirke Logo">
+                    <span>Kirke</span>
+                </a>
+                <a href="https://pin.it/7eCYO7Dak" class="btn btn-outline-dark" id="pinterest-link">
+                    <i class="bi bi-pinterest"></i>
+                    <span>Pinterest</span>
+                </a>
+            </div>
+
+            <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Video Platform Links">
+                <a href="https://www.tiktok.com/@rajka_apple" class="btn btn-outline-dark" id="tiktok-link">
+                    <i class="bi bi-tiktok"></i>
+                    <span>TikTok</span>
+                </a>
+                <a href="https://www.youtube.com/@rajka_apple" class="btn btn-outline-dark" id="youtube-link">
+                    <i class="bi bi-youtube"></i>
+                    <span>Youtube</span>
+                </a>
+            </div>
         </div>
 
         <div class="mt-4">
