add tumblr link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             </a>
 
             <!-- Image Platforms -->
+            <a href="https://www.tumblr.com/rajka-apple" class="btn btn-outline-dark" id="tumblr-link">
+                <i class="fa-brands fa-tumblr"></i>
+                <span>Tumblr</span>
+            </a>
             <a href="https://www.instagram.com/rajka_apple/" class="btn btn-outline-dark" id="instagram-link">
                 <i class="bi bi-instagram"></i>
                 <span>Instagram</span>
