--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                 <i class="bi bi-twitter-x"></i>
                 <span>Twitter</span>
             </a>
+            <a href="https://www.threads.com/@rajka_apple" class="btn btn-outline-dark" id="threads-link">
+                <i class="bi bi-threads"></i>
+                <span>Threads</span>
+            </a>
 
             <!-- Image Platforms -->
             <a href="https://www.tumblr.com/rajka-apple" class="btn btn-outline-dark" id="tumblr-link">
