remove redundant script from placeholders

--- a/index.html
+++ b/index.html
@@ -95,37 +95,13 @@
             </a>
 
             <!-- Placeholders -->
-            <script>
-                (function () {
-                    const icon = document.getElementById('placeholder-one');
-                    const icons = ['bi-hourglass-split', 'bi-hourglass-bottom', 'bi-hourglass-top'];
-                    let index = 0;
-
-                    setInterval(() => {
-                        icon.classList.remove(icons[index]);
-                        index = (index + 1) % icons.length;
-                        icon.classList.add(icons[index]);
-                    }, 1500); // switch every 1.5 seconds
-                })();
-                (function () {
-                    const icon = document.getElementById('placeholder-two');
-                    const icons = ['bi-hourglass-top', 'bi-hourglass-split', 'bi-hourglass-bottom'];
-                    let index = 0;
-
-                    setInterval(() => {
-                        icon.classList.remove(icons[index]);
-                        index = (index + 1) % icons.length;
-                        icon.classList.add(icons[index]);
-                    }, 1500); // switch every 1.5 seconds
-                })();
-            </script>
             <a href="/" class="btn btn-outline-dark" id="placeholder-one">
-                <i class="bi bi-hourglass"></i>
-                <span>Coming soon...</span>
+                <i class="bi bi-hourglass-split"></i>
+                <span style="font-size: x-large">Coming soon...</span>
             </a>
             <a href="/" class="btn btn-outline-dark" id="placeholder-two">
-                <i class="bi bi-hourglass"></i>
-                <span>Coming soon...</span>
+                <i class="bi bi-hourglass-split"></i>
+                <span style="font-size: large">Coming soon...</span>
             </a>
         </div>
 
