--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </a>
             <a href="/" class="btn btn-outline-dark" id="placeholder-two">
                 <i class="bi bi-hourglass-split"></i>
-                <span style="font-size: large">Coming soon...</span>
+                <span style="font-size: x-large">Coming soon...</span>
             </a>
         </div>
 
